--- a/pmemorial/memorials/templates/memorials/process_donation.html
+++ b/pmemorial/memorials/templates/memorials/process_donation.html
@@ -7,13 +7,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h2>Prepare Memorials for Donation</h2>
+            <h1>Prepare Memorials for Donation</h1>
             <p>Select the Memorials you'd like to submit today, as well as the fund you wish to donate to.</p>
         </div>
     </div>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="row prettier">
         <div class="col-md-12">
             <p><input type="checkbox" name="select-all" id="select-all" value="select_all"> SELECT ALL</p>
 <table style="width: 100%;">
