--- a/pmemorial/memorials/templates/memorials/memorial_form.html
+++ b/pmemorial/memorials/templates/memorials/memorial_form.html
@@ -4,15 +4,22 @@
 
 {% block content %}
 <div class="container">
-<h2>Add a Memorial for {{ user.profile.hospital }}</h2>
+    <div class="row">
+        <div class="col-md-12">
+  
+<h1>Add a Memorial for {{ user.profile.hospital }}</h1>
 
 <form action="" method="post">
+    <div class="prettier"
     <table>
     {% csrf_token %}
     {{ form.as_p }}
     </table>
     <input type="submit" value="Submit">
-<input type="hidden" name="hospital" value="{{ user.profile.hospital.id }}">
+    <input type="hidden" name="hospital" value="{{ user.profile.hospital.id }}">
+</div>
 </form>
+</div>
+</div>
 </div>
 {% endblock %}
