--- a/pmemorial/memorials/templates/memorials/memorial_list.html
+++ b/pmemorial/memorials/templates/memorials/memorial_list.html
@@ -6,13 +6,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h2>Unsubmitted Memorials for {{ user.profile.hospital }}</h2>
+            <h1>Unsubmitted Memorials for {{ user.profile.hospital }}</h1>
             <p>This is a list of all the Pet Memorials you have been adding recently, but haven't submitted to the College for processing.</p>
         </div>
     </div>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="row prettier">
         <div class="col-md-12">
 <table style="width:100%;">
     <tr>
