Revisiting django-registration

--- a/pmemorial/memorials/templates/memorials/base.html
+++ b/pmemorial/memorials/templates/memorials/base.html
@@ -69,11 +69,11 @@
                             <a class="nav-link" href="{% url 'process-donation' %}">Process A Donation</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'past-donations' %}">See Past Donations</a>
+                            <a class="nav-link" href="#">See Past Donations</a>
                         </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            <a class="nav-link" href="#">Logout</a>
                         </li>
                         {% endif %}
                         {% if not user.is_authenticated %}
